update reference to core + add comment code for schedules

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,3 +13,6 @@ deploy:
   - docker-compose up --exit-code-from publishodon publishodon 
   after_script:
   - docker-compose down --rmi all -v --remove-orphans
+  # only:
+  #   variables:
+  #     - $RUN == "true"
