try a hack to get authentication on gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 stages:
 - deploy
 
+before_script:
+  - git config --global url "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.hidora.com/softozor/publishodon/milimu.git"
+
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
