--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,15 @@
 stages:
 - deploy
 
-before_script:
-  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.hidora.com/".insteadOf "git@gitlab.hidora.com:"
-  - git submodule sync && git submodule update --init
-
-# variables:
-#   GIT_SUBMODULE_STRATEGY: recursive
-
 deploy:
   stage: deploy
   image: shopozor/docker-compose:$TOOLS_SHA
   before_script:
-  - git
-  - docker-compose -f core/docker-compose.yaml build publishodon
+  - docker-compose build
   script:
-  - docker-compose -f core/docker-compose.yaml up --exit-code-from publishodon publishodon 
+  - docker-compose up --exit-code-from publishodon publishodon 
   after_script:
-  - docker-compose -f core/docker-compose.yaml down --rmi all -v --remove-orphans
+  - docker-compose down --rmi all -v --remove-orphans
   # only:
   #   variables:
   #     - $RUN == "true"
