--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,20 @@
 stages:
 - deploy
 
+variables:
+  SOURCE_NAME: gitlab-publishodon-service
+
 deploy:
   stage: deploy
   image: shopozor/docker-compose:$TOOLS_SHA
   before_script:
+  - dotnet nuget add source "${CI_API_V4_URL}/projects/172/packages/nuget/index.json" --name ${SOURCE_NAME} --username $GITLAB_USER_LOGIN --password $PRIVATE_ACCESS_TOKEN --store-password-in-clear-text
   - docker-compose build
   script:
   - docker-compose up --exit-code-from publishodon publishodon 
   after_script:
   - docker-compose down --rmi all -v --remove-orphans
+  # TODO: activate this:
   # only:
   #   variables:
   #     - $RUN == "true"
