--- a/App.csproj
+++ b/App.csproj
@@ -6,6 +6,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Content Include="log4net.config">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Softozor.Publishodon" Version="1.0.2" />
       <PackageReference Include="Softozor.Publishodon.BusinessLayer" Version="1.0.0" />
       <PackageReference Include="Softozor.Publishodon.Json" Version="1.0.2" />
