--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ run:
   stage: run
   image: mcr.microsoft.com/dotnet/runtime:5.0-alpine-amd64
   before_script:
-  - cd ./bin/release/net5.0
+  - cd ./bin/release/net5.0/publish
   script:
   - ./App --root-folder $CI_PROJECT_DIR --participants-database ./database/participants.json --publications-folder ./database/publications
   # TODO: activate this:
