--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,19 +23,15 @@ build:
     expire_in: 1 hour
     paths:
     - ./bin/release/net5.0
-  # TODO: activate this:
-  # only:
-  #   variables:
-  #     - $RUN == "true"
+  only:
+    variables:
+    - $RUN == "true"
 
 run:
   stage: run
   image: mcr.microsoft.com/dotnet/runtime:5.0-alpine-amd64
-  before_script:
-  - cd ./bin/release/net5.0
   script:
   - ./bin/release/net5.0/App --root-folder . --participants-database ./database/participants.json --publications-folder ./database/publications
-  # TODO: activate this:
-  # only:
-  #   variables:
-  #     - $RUN == "true"
+  only:
+    variables:
+    - $RUN == "true"
