--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,3 +34,6 @@ run:
       --publications-folder ./database/publications \
       --file-server-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/files \
       --time-period ${TIME_PERIOD}
+  rules:
+    if: $TIME_PERIOD
+
