--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,5 +35,5 @@ run:
       --file-server-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/files \
       --time-period ${TIME_PERIOD}
   rules:
-    if: $TIME_PERIOD
+    - if: $TIME_PERIOD
 
